# setuptools_example

./: manifest.in  pyproject.toml  readme.md  setup.cfg  setup.py
install/: setup.sh
mypkg/: __init__.py
mypkg/mymodule/: __init__.py
