[metadata]
name = mypackage
version = 0.0.1
description = short description
long_description = a long description
author = my name
author_email = my email

[options]
packages = find:
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
include_package_data = True

[options.entry_points]
console_scripts =
    some_func = mypkg.mymodule:some_func
    main_func = mypkg:main